	anova.cca). It looks like all anova.cca tests pass also with
	capscale (but more thorough test will be run before closeing the
	anova.cca bug in vegan-forge). It seems that subset and na.action
	also work. 

	* anova.cca: most cases work now when terms are given in
	attach()ed data frame after changes to anova.ccabyterm() and
	ordiParseFormula(). 

Version 1.18-20 (closed January 9, 2011)

	* base of vegan release 1.17-6 (released on Jan 10, 2011).

	* capscale: the total inertia was defined as the sum of absolute
	values of inertia so that negative eigenvalues of imaginary
	dimensions increase inertia (changes in 1.18-17 and release
	1.17-5). Torsten Hauffe reported this as a bug in vegan
	open-discussion forum in R-Forge on Dec 22, 2010. I (JO) answered
	on Jan 1, 2011 and justified the change, and said this is a design
	decision, and not a bug. Now I have reconsidered this design
	decision, and it really seems to me that it was wrong. Now the
	negative eigenvalues again reduce the total inertia, and are
	similar as in vegan 1.17-4 and earlier. The capscale() output got
	a new item of "Real Total" that gives the sum of eigenvalues
	without the imaginary component, and the proportions are given
	only within this real component (if there are negative
	eigenvalues).  The eigenvalues of negative eigenvalues are not
	added to the result, because they are not strictly for the
	unconstrained component only like previously indicated. However,
	summary.eigenvals() estimates the proportions explained using
	absolute values of eigenvalues since this seems to make sense
	there (the proportion explained is now based on absolute
	eigenvalues to give more sensible output).

Version 1.18-19 (closed January 3, 2011)

	* new version opened with the release of vegan 1.17-5 (submitted
	Dec 17, 2010, released at CRAN on on Dec 18, 2010).

	* CCorA: Pierre Legendre's minor fixes, including scaling of
	scores Cy an Cx, and removing requirement of MASS.
